# GGBRobot

./: .gitignore  CMakeLists.txt  partitions.csv  receive_and_display.py  test_opencv_gui.py
.cache/clangd/index/: main.cpp.89FBFE794D689598.idx
main/: CMakeLists.txt  OneEuroFilter.h  PID.hpp  benchmark.cpp  benchmark.hpp  camera.hpp  camera_module.cpp  camera_module.hpp  config.hpp  idf_component.yml  image_detector.cpp  image_detector.hpp  image_processor.cpp  image_processor.hpp  input.h  kinematics_solver.cpp  kinematics_solver.hpp  main.cpp  mini_matrix.cpp  mini_matrix.hpp  png2c  robot.cpp  robot.hpp  servo_controller.cpp  servo_controller.hpp  simd.S  stream_server.cpp  stream_server.hpp  timing_profiler.hpp
