idf_component_register(
    SRCS "main.cpp"
         "robot.cpp"
         "benchmark.cpp"
         "camera_module.cpp"
         "stream_server.cpp"
         "image_processor.cpp"
         "servo_controller.cpp"
         "kinematics_solver.cpp"
         "image_detector.cpp"
         "OneEuroFilter.cpp"
        
    INCLUDE_DIRS ""
)